fix: [pd-1016] spacing add when exclusive tag is present

--- a/src/component/ProductItem/ProductItem.style.scss
+++ b/src/component/ProductItem/ProductItem.style.scss
@@ -235,7 +235,7 @@
     .PLPMobileColorVarients {
       background-color: #ffffff;
       opacity: 1;
-      bottom: 16px;
+      bottom: 23px;
       left: calc(100% - 8px);
       transform: translateX(-100%);
       border-radius: 12px;
